# GLSpaceFlight

./: .gitignore  CMakeLists.txt  doxygen.conf
glad/: glad.c
glad/include/glad/: glad.h
src/: game_renderer.c  game_renderer.h  game_state.c  game_state.h  input_handler_glfw.c  input_handler_glfw.h  input_state.c  input_state.h  main.c  matrix.c  matrix.h  mesh.c  mesh.h  shader.h  vector.c  vector.h
